--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
   </head>
 
